--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>RaptorizeReborn - Demo</title>
-        <link rel="stylesheet" href="css/raptor.css">
+        <link rel="stylesheet" href="/RaptorizeReborn/css/raptor.css">
     </head>
     <body>
         <header>
@@ -15,8 +15,8 @@
         <section>
             Activate from Konami Code: ↑ ↑ ↓ ↓ ← → ← → B A
         </section>
-        <script src="js/Raptor.js"></script>
-        <script src="js/konami.js"></script>
+        <script src="/RaptorizeReborn/js/Raptor.js"></script>
+        <script src="/RaptorizeReborn/js/konami.js"></script>
         <script>
             var raptor = new Raptor();
             var konami = new Konami(function() {
