--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <section>
             Activate from Konami Code: ↑ ↑ ↓ ↓ ← → ← → B A
         </section>
-        <script src="/RaptorizeReborn/js/Raptor.js"></script>
-        <script src="/RaptorizeReborn/js/konami.js"></script>
+        <script src="/js/Raptor.js"></script>
+        <script src="/js/konami.js"></script>
         <script>
             var raptor = new Raptor();
             var konami = new Konami(function() {
