--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <section>
             Activate from Konami Code: ↑ ↑ ↓ ↓ ← → ← → B A
         </section>
-        <script src="/js/Raptor.js"></script>
-        <script src="/js/Konami.js"></script>
+        <script src="/RaptorizeReborn/js/Raptor.js"></script>
+        <script src="/RaptorizeReborn/js/Konami.js"></script>
         <script>
             var raptor = new Raptor('/RaptorizeReborn/img/raptor.png','/RaptorizeReborn/sounds/raptor-sound.mp3');
             var konami = new Konami(function() {
