--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>RaptorizeReborn - Demo</title>
+        <link rel="stylesheet" href="/RaptorizeReborn/css/pages/index.css">
         <link rel="stylesheet" href="/RaptorizeReborn/css/raptor.css">
     </head>
     <body>
