--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html>
     <head>
         <title>RaptorizeReborn - Demo</title>
-        <link rel="stylesheet" href="/RaptorizeReborn/css/pages/index.css">
+        <link rel="stylesheet" href="/RaptorizeReborn/css/page/index.css">
         <link rel="stylesheet" href="/RaptorizeReborn/css/raptor.css">
     </head>
     <body>
+        <aside id="github">
+            <a href="https://github.com/Nugorra/RaptorizeReborn" target="_blank" class="gitribon">Find it on GitHub</a>
+        </aside>
         <header>
             <h1>RaptorizeReborn - Demo</h1>
         </header>
         <section>
-            Activate from Script:
+            Activate from Script:<br>
             <button class="raptor">Rawrrr!</button>
         </section>
         <section>
-            Activate from Konami Code: ↑ ↑ ↓ ↓ ← → ← → B A
+            Activate from Konami Code:<br>↑ ↑ ↓ ↓ ← → ← → B A
         </section>
         <script src="/RaptorizeReborn/js/Raptor.js"></script>
         <script src="/RaptorizeReborn/js/Konami.js"></script>
@@ -23,7 +26,6 @@
             var konami = new Konami(function() {
                 raptor.trigger();
             });
-            // konami.sequenzTest();
 
             document.querySelector('button.raptor').addEventListener('click',function(){
                 var self = this;
