Page and timing changes

--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     </head>
     <body>
         <aside id="github">
-            <a href="https://github.com/Nugorra/RaptorizeReborn" target="_blank" class="gitribon">Find it on GitHub</a>
+            <a href="https://github.com/Nugorra/RaptorizeReborn" target="_blank" class="gitribon">'Rawrrr!' it on GitHub</a>
         </aside>
         <header>
             <h1>RaptorizeReborn - Demo</h1>
         </header>
         <section>
-            Activate from Script:<br>
+            <p>Activate from Script:</p>
             <button class="raptor">Rawrrr!</button>
         </section>
         <section>
-            Activate from Konami Code:<br>↑ ↑ ↓ ↓ ← → ← → B A
+            <p>Activate from Konami Code:</p>
+            <p>↑ ↑ ↓ ↓ ← → ← → B A</p>
         </section>
         <script src="/RaptorizeReborn/js/Raptor.js"></script>
         <script src="/RaptorizeReborn/js/Konami.js"></script>
